Bug 84105 - [ILK] Corrupted screen rotation using xrandr with PageFlip enabled.
Summary: [ILK] Corrupted screen rotation using xrandr with PageFlip enabled.
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-19 20:49 UTC by Mihail Kasadjikov
Modified: 2014-09-22 06:21 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log without «PageFlip disabled» (33.24 KB, text/plain)
2014-09-20 20:30 UTC, Mihail Kasadjikov
no flags Details
Xorg.0.log with «PageFlip disabled» (33.19 KB, text/plain)
2014-09-20 20:31 UTC, Mihail Kasadjikov
no flags Details

Description Mihail Kasadjikov 2014-09-19 20:49:04 UTC
I have Lenovo ThinkPad X201 tablet with Intel Core i7 L-620 (Intel HD Graphics gen 5).

I use «xrandr --output LVDS --rotate inverted» to rotate screen 180° for tablet mode. But somewhere around version 2.99.912 of xf86-video-intel this feature was broken.
Please see video here: http://youtu.be/JjAScg4MZNk
On «test 1» and «test 3» the «PageFlip» option uses default value (enabled) and screen redrawing is corrupted.
On «test 2» and «test 4» the «PageFlip» option is disabled in «xorg.conf» and screen redrawing is good.

I use:
Debian testing
kernel 3.15.10
xf86-video-intel 2.99.916 from git
KDE 4.14
Comment 1 Chris Wilson 2014-09-20 06:24:10 UTC
Please attach your Xorg.0.log.
Comment 2 Mihail Kasadjikov 2014-09-20 20:30:03 UTC
Created attachment 106580 [details]
Xorg.0.log without «PageFlip disabled»

Xorg.0.log with this options in config:

$ cat /etc/X11/xorg.conf.d/10-intel.conf | grepv
Section "Device"
        Identifier      "Intel HD"
        Driver          "intel"
        Option          "FallbackDebug" "true"
        Option          "AccelMethod" "sna"
EndSection
Comment 3 Mihail Kasadjikov 2014-09-20 20:31:30 UTC
Created attachment 106581 [details]
Xorg.0.log with «PageFlip disabled»

Xorg.0.log with this options in config:

$ cat /etc/X11/xorg.conf.d/10-intel.conf | grepv
Section "Device"
        Identifier      "Intel HD"
        Driver          "intel"
        Option          "FallbackDebug" "true"
        Option          "PageFlip" "false"
        Option          "AccelMethod" "sna"
EndSection
Comment 4 Mihail Kasadjikov 2014-09-21 08:33:42 UTC
With «Option DRI 2» the both problems has gone.

$ cat /etc/X11/xorg.conf.d/10-intel.conf | grepv
Section "Device"
        Identifier      "Intel HD"
        Driver          "intel"
        Option          "DRI" "2"
        Option          "FallbackDebug" "true"
        Option          "AccelMethod" "sna"
EndSection
Comment 5 Chris Wilson 2014-09-21 18:56:26 UTC
I think I spotted this bug:

commit 376037e6336dfc3b32c51b774ab8a80f64390e02
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Sep 21 19:51:47 2014 +0100

    sna: Skip present unflip if the output is rotated
    
    With a rotated output and shadow buffers, we never perform the flip in
    the first place and so can ignore the unflip request as well.
    
    Reported-by: Mihail Kasadjikov <hamer.mk@gmail.com>
    References: https://bugs.freedesktop.org/show_bug.cgi?id=84105
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 6 Mihail Kasadjikov 2014-09-21 19:57:39 UTC
On this git snapshot the xrandr rotation works fine.
Comment 7 Chris Wilson 2014-09-22 06:21:10 UTC
Thanks for the bug report and testing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.