sna: Skip present unflip if the output is rotated

With a rotated output and shadow buffers, we never perform the flip in
the first place and so can ignore the unflip request as well.

Reported-by: Mihail Kasadjikov <hamer.mk@gmail.com>
References: https://bugs.freedesktop.org/show_bug.cgi?id=84105
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>